--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "format": "prettier --write '**/*.{ts,tsx,js,jsx,json,css,md}'"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.26",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.34.0",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
